--- a/WorkerDock.Plugins/WorkerDock.Plugins.csproj
+++ b/WorkerDock.Plugins/WorkerDock.Plugins.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Plugins\BasicPlugin\InvalidArgConfigCall.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
