--- a/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
+++ b/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MikeDev.Database" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Plugins\BasicPlugin\InvalidArgConfigCall.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
