--- a/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
+++ b/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MikeDev.Database" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
