--- a/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
+++ b/src/WorkerDock.Plugins/WorkerDock.Plugins.csproj
@@ -10,8 +10,18 @@
 
   <ItemGroup>
     <None Update="Plugins\BasicPlugin\InvalidArgConfigCall.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Plugins\NotePlugin\InvalidArgAddCall.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Plugins\NotePlugin\NoArgNoteCall.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Plugins\NotePlugin\usr\" />
   </ItemGroup>
 
 </Project>
